# Install-CMake-make-gcc-OpenCV-on-Windows

./: CMakeLists.txt  README.md  display_img.cpp
